# template-render-wizard

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build.sh  syntax.s
.github/workflows/: main.yml  mergeable.yml
fixtures/: 002-tree-merge-with-empty.yaml  003-simple-text.t  003-simple-text.txt  003-tree-override-values.tpl  003-tree-override-values.yaml  004-include.tpl  004-text-with-condition.t  004-text-with-condition.tpl  005-text-with-nested-conditions.t  005-text-with-nested-conditions.tpl  005-values-test01.out  005-values-test02.out  005-values-test03.out  005-values-test03.yaml  005-values-test04.out  005-values-test04.yaml  006-for-expr-values.out  006-for-expr-values.yaml  006-for-expr.tpl  007-nested-loop.out  007-nested-loop.tpl  007-nested-loop.yaml  008-key-val-for-loop.tpl  009-context-with-parent-ftmt.yaml  009-context-with-parent-stmt.out  009-context-with-parent-stmt.t  009-context-with-parent-stmt.tpl  010-if-and-or-conditions-case-01.yaml  010-if-and-or-conditions.t  010-if-and-or-conditions.tpl  011-math-op-check.out  011-math-op-check.t  011-math-op-check.tpl  011-math-op-check.tt  math.t  math.tpl
fixtures/render-tests/: 003-values.out  003-values.yaml  004-text-with-condition.tpl  004-values.out  004-values.yaml  005-text-with-nested-conditions.tpl  005-values-test01.out  005-values-test01.yaml  005-values-test02.out  005-values-test02.yaml  005-values-test03.out  005-values-test03.yaml  006-for-expr-values.out  006-for-expr.t  007-nested-loop.out  007-nested-loop.t  008-key-val-for-loop.out  008-key-val-for-loop.t  008-key-val-for-loop.yaml  010-if-and-or-conditions-case-01.out  010-if-and-or-conditions-case-01.yaml  011-math-op-check.out  011-math-op-check.t  011-math-op-check.tpl  011-math-op-check.yaml  012-include-in-loop.out  012-include-in-loop.yaml  012-include.t  012-include.tpl  013-include-with.out  013-include-with.t  013-include-with.tpl  013-include-with.yaml  014-include-with-only.out  014-include-with-only.t  014-include-with-only.tpl  014-include-with-only.yaml
fixtures/render-tests/__include/: item.tpl
include/: trw.h
include/trw/: config.h  context.h  exceptions.h  expression.h  lexer.h  position.h  render.h  stream.h  syntax.h  token.h  tree_parameters.h  utils.h  value.h
src/: main.cpp
src/trw/: config.cpp  context.cpp  expression.cpp  leaf_element.cpp  position.cpp  render.cpp  stream.cpp  tree_parameters.cpp  value.cpp
src/trw/lexer/: char_stack.cpp  get_next_token_include_mode.cpp  get_next_token_include_with_mode.cpp  get_next_token_include_with_value_mode.cpp  lexer.cpp
src/trw/render/: calc_bool_expr.cpp  calc_expr.cpp  calc_expr_tree_factor.cpp  calc_expr_tree_term.cpp  construct.cpp  create_context_for_include_stmt.cpp  get_value_from_syntax_element.cpp  get_value_from_token.cpp  render.cpp  render_if_expression.cpp  render_tree.cpp  (+5 more)
tests/: main.cpp
tests/include/: tests.h
tests/src/: asserts.cpp  helpers.cpp  main.cpp
(+40 files in other folders)
